        - The minimal version of MariaDB is now '10.5' ;
          the UUID fields may have to be manually converted if you use MariaDB (see the upgrade notes above).
        - The URL fields assume "https" by default ; set the setting 'FORMS_URLFIELD_ASSUME_HTTPS' if you prefer "http"
          (this setting will be removed with Django 6.0 -- & so Creme 2.9 or something like that).
    # A new mandatory app has been added: "Custom entities".
      It allows users to create their own types of entity without coding.
        - You can create up to 20 types.
        - The new types have just one regular field ("name"), you can add custom-field as usual.
        - BEWARE: if you upgrade from a previous version of Creme, 'creme.custom_entities' must be
          in your 'settings.INSTALLED_APPS' (it should be OK it you did not modify it or have modified as advised).
    # A Workflow engine has been added; it allows to configure from the UI some automatic actions.
        - Current events which can trigger a Workflow :
          entity creation, entity edition, relationship adding, property adding.
        - Current available actions :
            - Add a property
            - Add a relationship
            - Send an email (needs the app 'emails').
      Note: a new middleware has been added in the default settings 'MIDDLEWARE' : "WorkflowMiddleware".
            You should add it in you have your own definition of this variable.
    # The deletion & cloning buttons have been reworked in detailed views & list-views;
      they are now disabled when a rule avoids you to delete them (e.g. a Contact corresponding
      to a user) & the reason is displayed as tool-tip.
    # The HeaderFilters (views of list) & EntityFilters have been improved :
        - The ones without owner can now only be edited/deleted by superusers in the default
          configuration ; a SettingValue has been added to allow all users to edit/delete them